Display webPage for admin or normal user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 <app-nav></app-nav>  
 <div>
-        <app-categories></app-categories>
+        <app-categories style="width:170px"></app-categories>
         <div id="routerOutleDisplay"style="width:80%">
         <router-outlet ></router-outlet>
         </div>
