--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -18,7 +18,7 @@
                         Opis: {{products.description}}
                   </p>
                 </mat-card-content>
-                  <div class="NormarPrice" *ngIf="products.newPrice == null;else isReducionPrice">
+                  <div class="NormarPrice" *ngIf="products.newPrice == '';else isReducionPrice">
                       <p>Cena : {{products.price}} zł</p> 
                   </div>
                   <ng-template #isReducionPrice>
@@ -26,11 +26,11 @@
                      <p>   Cena : <small>{{products.price}} </small>  <strong>{{products.newPrice}}  </strong> zł  </p>
                   </div>
                 </ng-template>
-                <mat-card-actions class= "buttonBox">
+                <mat-card-actions class= "buttonBox" *ngIf="this.us.currenUser != null && this.us.currenUser.permissions == true">
                     <button color="warn" mat-raised-button (click)="deleteElement(products.id)" >Usuń</button>  
                     <button color="primary" mat-raised-button [routerLink]="['/edytuj/',CategoryId, products.id]" >Edytuj</button>  
                 </mat-card-actions>
     </div>
 </div>
 
-<button color="warn" mat-raised-button [routerLink]="['/dodajProdukt/', CategoryId]" >Dodaj Produkt</button>  
+<button color="warn" *ngIf="this.us.currenUser != null && this.us.currenUser.permissions == true" mat-raised-button [routerLink]="['/dodajProdukt/', CategoryId]" >Dodaj Produkt</button>  
