--- a/src/app/shoping-cart/shoping-cart.component.html
+++ b/src/app/shoping-cart/shoping-cart.component.html
@@ -16,13 +16,13 @@
       <th mat-header-cell *matHeaderCellDef> Kategoria </th>
       <td mat-cell *matCellDef="let element"> {{element.category}} </td>
     </ng-container>
-    <ng-container matColumnDef="price">
+    <ng-container matColumnDef="price" >
       <th mat-header-cell *matHeaderCellDef> Cena /sz </th>
       <td mat-cell *matCellDef="let element"> {{element.price}}zł </td>
     </ng-container>
-    <ng-container matColumnDef="quantityBuy">
+    <ng-container matColumnDef="quantityBuy" >
       <th mat-header-cell *matHeaderCellDef> Ilość sztuk </th>
-      <td mat-cell *matCellDef="let element"> {{element.quantityBuy}}  </td>
+      <td mat-cell *matCellDef="let element" > {{element.quantityBuy}}  </td>
     </ng-container>
     <ng-container matColumnDef="sum">
       <th mat-header-cell *matHeaderCellDef> Suma </th>
@@ -39,5 +39,5 @@
   </table>
 
 
-  <button color="primary"  mat-raised-button  >Zamawiam</button>
+  <button color="primary" (click)="order()" mat-raised-button  >Zamawiam</button>
 </div>
