--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
 </div>
 <app-nav></app-nav>  
 <div>
-        <app-categories style="width:170px"></app-categories>
+        <div id="categoryAndFilters" style="width:170px">
+                <app-categories ></app-categories>
+                <app-filtres></app-filtres>
+        </div>
         <div id="routerOutleDisplay"style="width:80%">
         <router-outlet ></router-outlet>
         </div>
