--- a/src/app/last-added-product/last-added-product.component.html
+++ b/src/app/last-added-product/last-added-product.component.html
@@ -12,7 +12,7 @@
 
                 </mat-card-header>
                 
-                <img mat-card-image width="100%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Three_IC_circuit_chips.JPG/220px-Three_IC_circuit_chips.JPG" alt="Brak obrazka">
+                <img mat-card-image  width="100%" [src]="products.imageUrl[0]" alt="Brak obrazka">
                 <mat-card-content>
                   <p>
                         Opis: {{products.description}}
