--- a/src/app/new-product/new-product.component.css
+++ b/src/app/new-product/new-product.component.css
@@ -1,3 +1,9 @@
+.mainContiner
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #addPicture
 {
     display: flex;
@@ -9,8 +15,21 @@
 {
     margin: 6px;
 }
+.picture .box
+{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+}
 .picture
 {
-
-    
+    display: flex;
+    justify-content: center;
+}
+.picture button
+{
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
