--- a/src/app/statistic-for-admin/statistic-for-admin.component.html
+++ b/src/app/statistic-for-admin/statistic-for-admin.component.html
@@ -15,6 +15,8 @@
             <th>Nowa cena</th>
             <th>Ilosć</th>
             <th>Data dodania</th>
+            <th></th>
+            <th></th>
         </tr>
         <tr  *ngFor="let products of ProductDisplay | async ">
           
@@ -24,7 +26,9 @@
            <td >{{products.newPrice}}zł</td>
            <td>{{products.quantity}}</td>
            <td>{{products.dateOfCreation}}</td>
-
+           <td><button mat-raised-button color="warn"  (click)="deleteProduct(products.id)" >Usuń</button></td>
+           <td><button color="primary" mat-raised-button [routerLink]="['/edytuj/',products.categoryId, products.id]" >Edytuj</button>  
+           </td>
         </tr>
       
      </table>
@@ -36,6 +40,7 @@
             <th>Email</th>
             <th>Adres</th>
             <th>Admin</th>
+            <th></th>
         </tr>
         <tr  *ngFor="let user of UsersDisplay | async ">
           
@@ -44,7 +49,7 @@
            <td >{{user.email}}</td>
            <td>{{user.address}}</td>
            <td>{{user.permissions}}</td>
-
+           <td><button mat-raised-button color="warn"  (click)="deleteUser(user.id)" >Usuń</button></td>
         </tr>
       
      </table>
@@ -62,7 +67,7 @@
           
            
            <td>{{order.id}}</td>
-           <td>{{order.userID}}</td>
+           <td>{{order.userId}}</td>
            <td>{{order.numberOfProducts}}</td>
            <td >{{order.sumPrice}}</td>
           
