--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -27,7 +27,7 @@
                   </div>
                 </ng-template>
                 <mat-card-actions class= "buttonBox" *ngIf="this.us.currenUser != null && this.us.currenUser.permissions == true">
-                    <button color="warn" mat-raised-button (click)="deleteElement(products.id)" >Usuń</button>  
+                    <button color="warn" mat-raised-button  [routerLink]="['/nowosci/']" (click)="deleteElement(products.id)" >Usuń</button>  
                     <button color="primary" mat-raised-button [routerLink]="['/edytuj/',CategoryId, products.id]" >Edytuj</button>  
                 </mat-card-actions>
     </div>
