--- a/src/app/shoping-cart/shoping-cart.component.html
+++ b/src/app/shoping-cart/shoping-cart.component.html
@@ -18,7 +18,7 @@
     </ng-container>
     <ng-container matColumnDef="price" >
       <th mat-header-cell *matHeaderCellDef> Cena /sz </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}}zł </td>
+      <td mat-cell *matCellDef="let element"> {{element.isDiscount?element.newPrice:element.price}}zł </td>
     </ng-container>
     <ng-container matColumnDef="quantityBuy" >
       <th mat-header-cell *matHeaderCellDef> Ilość sztuk </th>
@@ -26,7 +26,7 @@
     </ng-container>
     <ng-container matColumnDef="sum">
       <th mat-header-cell *matHeaderCellDef> Suma </th>
-      <td mat-cell *matCellDef="let element"> {{element.quantityBuy * element.price }}  zł</td>
+      <td mat-cell *matCellDef="let element"> {{ element.quantityBuy *(element.isDiscount?element.newPrice:element.price)}}  zł</td>
     </ng-container>
     <ng-container matColumnDef="buttons">
       <th mat-header-cell *matHeaderCellDef>  </th>
