--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
 <button mat-button [routerLink]="[ '/wyprzedaz']" >Wyprzedaże</button>
 <button mat-button [routerLink]="[ '/kontakt']" >Kontakt</button>
 <button mat-button [routerLink]="[ '/dostawa-i-platnosci']" >Dostawa i płatności</button>
-<button mat-button [routerLink]="[ '/statystyka']" >Statystyka dla admina</button>
+<button mat-button *ngIf="us.IsAdmin()" [routerLink]="[ '/statystyka']" >Statystyka dla admina</button>
 </div>
 <div id="naviRight">
     
