--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -61,7 +61,7 @@
             <ul class="contact-list">
                 <li>
                     <strong>E-mail</strong>
-                    <span><a href="mailto:robertsmith@company.com">robertsmith@company.com</a></span>
+                    <span><a href="mailto:Avtech@company.com">Avtech@company.com</a></span>
                 </li>
                 <li>
                     <strong>Phone</strong>
@@ -73,14 +73,14 @@
                 </li>
                 <li>
                     <strong>Skype</strong>
-                    <span>robsmithcompany</span>
+                    <span>Avtechcompany</span>
                 </li>
                 <li>
                     <strong>Address</strong>
-                    <span>24058, Belgium, Brussels, Liutte 27, BE</span>
+                    <span>Kraków, ul. Krzywa 7  30-001 Kraków</span>
                 </li>
             </ul>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80598.8931079607!2d4.305349869517269!3d50.85495409070423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3a4ed73c76867%3A0xc18b3a66787302a7!2sBruksela%2C+Belgia!5e0!3m2!1spl!2spl!4v1525718414134"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2561.002254533709!2d19.937225215138334!3d50.067519422764384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b056e10dbfd%3A0xa716703567a91dd0!2sKrzywa+7%2C+31-141+Krak%C3%B3w!5e0!3m2!1spl!2spl!4v1560275120026!5m2!1spl!2spl"
                 width="100%" height="340px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
