--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,23 +1,23 @@
 #contact_box
 {
     display: flex;
-    align-content: space-between;
+    align-content: center;
     justify-content: center;
-
+    width: 100%;
 }
 
 .column
 {
-   width: 50%;
+   width: 100%;
    margin: 0 15px;
    box-shadow: 0px 0px 4px 1px rgb(165, 169, 170);
-    background-color: white;
+   background-color: white;
 
 }
 
 #contact_section_box
 {
-width: 100%;
+
 height: 507px;
 padding: 10% 15%;
 
@@ -88,7 +88,7 @@ button
 {
     padding: 10% 15%;
     margin: 0;
-    width: 100%;
+   
     list-style: none;
 }
 
