--- a/src/app/statistic-for-admin/statistic-for-admin.component.html
+++ b/src/app/statistic-for-admin/statistic-for-admin.component.html
@@ -53,7 +53,7 @@
         </tr>
       
      </table>
-     <table  *ngIf="isDisplayOrder">
+     <table  *ngIf="isDisplayOrder" >
         <tr>
         
             <th>ID zamowienia</th>
@@ -63,7 +63,7 @@
             <th>Suma zamówienia</th>
             
         </tr>
-        <tr  *ngFor="let order of OrdersDisplay | async ">
+        <tr  *ngFor="let order of OrdersDisplay | async  " [routerLink]="['/zamowienie' , order.id]" routerLinkActive="router-link-active">
           
            
            <td>{{order.id}}</td>
